// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`URLPopover matches the snapshot in its default state 1`] = `
<div>
  <span>
    <div
      class="components-popover block-editor-url-popover is-positioned"
      style="position: absolute; top: 0px; left: 0px; transform: none;"
      tabindex="-1"
    >
      <div
        class="components-popover__content"
        style="max-height: 0px; overflow: auto;"
      >
        <div
          class="block-editor-url-popover__input-container"
        >
          <div
            class="block-editor-url-popover__row"
          >
            <div>
              Editor
            </div>
            <button
              aria-expanded="false"
              aria-label="Link settings"
              class="components-button block-editor-url-popover__settings-toggle has-icon"
              type="button"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`URLPopover matches the snapshot when the settings are toggled open 1`] = `
<div>
  <span>
    <div
      class="components-popover block-editor-url-popover is-positioned"
      style="position: absolute; top: 0px; left: 0px; transform: none;"
      tabindex="-1"
    >
      <div
        class="components-popover__content"
        style="max-height: 0px; overflow: auto;"
      >
        <div
          class="block-editor-url-popover__input-container"
        >
          <div
            class="block-editor-url-popover__row"
          >
            <div>
              Editor
            </div>
            <button
              aria-expanded="true"
              aria-label="Link settings"
              class="components-button block-editor-url-popover__settings-toggle has-icon"
              type="button"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                />
              </svg>
            </button>
          </div>
          <div
            class="block-editor-url-popover__row block-editor-url-popover__settings"
          >
            <div>
              Settings
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`URLPopover matches the snapshot when there are no settings 1`] = `
<div>
  <span>
    <div
      class="components-popover block-editor-url-popover is-positioned"
      style="position: absolute; top: 0px; left: 0px; transform: none;"
      tabindex="-1"
    >
      <div
        class="components-popover__content"
        style="max-height: 0px; overflow: auto;"
      >
        <div
          class="block-editor-url-popover__input-container"
        >
          <div
            class="block-editor-url-popover__row"
          >
            <div>
              Editor
            </div>
          </div>
        </div>
      </div>
    </div>
  </span>
</div>
`;
